@@ -1,5 +1,5 @@
    |-----handy-ruler------------------------------------------------------|
-gdm: GDM (GNOME Display Manager)
+gdm: gdm (GNOME Display Manager)
 gdm:
 gdm: The Gnome Display Manager (GDM) is a display manager that
 gdm: implements all significant features required for managing
