@@ -1,7 +1,7 @@
                  |-----handy-ruler---------------------------------------------------|
 faenza-icon-theme: faenza-icon-theme (icon theme)
 faenza-icon-theme:
-faenza-icon-theme: Repackaging of the popular Faenza icon theme for GNOME and Xfce.
+faenza-icon-theme: Repackaging of the popular Faenza icon theme for Xfce.
 faenza-icon-theme:
 faenza-icon-theme:
 faenza-icon-theme: 
