@@ -1,1 +1,0 @@
-shimmerproject-Faenza-Xfce-*.tar.gz
