@@ -1,12 +1,0 @@
-           |-----handy-ruler------------------------------------------------------|
-faenza-xfce: faenza-xfce (xfce icon theme)
-faenza-xfce:
-faenza-xfce: This is an addon for the Faenza icon theme, intended
-faenza-xfce: to make it complete when using within Xfce.
-faenza-xfce:
-faenza-xfce: 
-faenza-xfce: 
-faenza-xfce:
-faenza-xfce:
-faenza-xfce:
-faenza-xfce: Package created by Niki Kovacs <info@microlinux.fr>
