@@ -1,10 +1,10 @@
            |-----handy-ruler------------------------------------------------------|
-gtk-engines: gtk-engines (Theme engines for GTK+2)
+gtk-engines: gtk-engines (theme engines for GTK+2)
 gtk-engines:
-gtk-engines: gtk-engines is a collection of basic theme engines for GTK+2.
+gtk-engines: Gtk-engines is a collection of basic theme engines for GTK+2.
 gtk-engines:
 gtk-engines: This package contains Clearlooks, Crux, Glide, HC, Industrial,
-gtk-engines: LUA, Mist, Redmond, and ThinIce themes.
+gtk-engines: LUA, Mist, Redmond and ThinIce themes.
 gtk-engines:
 gtk-engines: 
 gtk-engines:
